# hisi-crypto

./: CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  publish.yml
src/: key.rs  lib.rs  rng.rs  sae.rs  secret.rs
src/sae/: rustcrypto.rs
tests/: sae.rs
